[tool.poetry]
name = "postgres-hw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "postgres_hw"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
